# mqtoy

./: Cargo.toml  README.md  RELEASE.md  build.rs
.github/workflows/: release-multiplatform-binaries.yml  release.yml  rust.yml
examples/: client_example.rs
proto/: mq.proto
src/: client.rs  lib.rs  main.rs  message_queue.rs  metrics.rs  monitoring.rs  server.rs
src/coordinator/: mod.rs
src/network/: mod.rs
src/storage/: mod.rs
src/transaction/: mod.rs
