[[bin]]
name = "mq-server"
path = "src/bin/server.rs"

[[bin]]
name = "mq-client"
path = "src/bin/client.rs"

[[bin]]
name = "mq-monitoring"
path = "src/bin/monitoring.rs"


[package]
name = "mq"
version = "1.0.0"
edition = "2021"
authors = ["zzq <zhaoguangqing7@gmail.com>"]
description = "A high-performance message queue system written in Rust"

[[example]]
name = "client_example"
path = "examples/client_example.rs"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
tokio-stream = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sled = "0.34"
tonic = "0.10"
prost = "0.12"
tracing = "0.1"
tracing-subscriber = "0.3"
uuid = { version = "1.6", features = ["v4", "serde"] }
async-trait = "0.1"
thiserror = "1.0"
structopt = "0.3"
chrono = { version = "0.4", features = ["serde"] }
futures = "0.3"
flate2 = "1.0"
clap = { version = "4.4", features = ["derive"] }
aes-gcm = "0.10"
base64 = "0.21"
getrandom = "0.2"
actix-web = "4.4"
actix-rt = "2.9"
prometheus = "0.13"
lazy_static = "1.4"

[build-dependencies]
tonic-build = "0.10"

[dev-dependencies]
tempfile = "3.8"
tokio-test = "0.4"
